--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>lu.uni.jakarta</groupId>
 	<artifactId>springProject001</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springProject001</name>
-	<description>Demo project for Spring Boot</description>
+	<name>exercise5</name>
+	<description>REST project using XML file </description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -63,26 +63,33 @@
 	 <!--      <scope>runtime</scope> -->
 	  </dependency>
 	  
-		<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
-		<dependency>
-		    <groupId>com.sun.xml.bind</groupId>
-		    <artifactId>jaxb-impl</artifactId>
-		    <version>3.0.1</version>
-		</dependency>		
+	<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+	<dependency>
+	    <groupId>com.sun.xml.bind</groupId>
+	    <artifactId>jaxb-impl</artifactId>
+	    <version>3.0.1</version>
+	</dependency>		
 
-<!-- https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api -->
-<dependency>
-    <groupId>jakarta.activation</groupId>
-    <artifactId>jakarta.activation-api</artifactId>
-    <version>2.0.1</version>
-</dependency>
-
-<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-<dependency>
-    <groupId>javax.xml.bind</groupId>
-    <artifactId>jaxb-api</artifactId>
-    <version>2.1</version>
-</dependency>
+	<!-- https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api -->
+	<dependency>
+	    <groupId>jakarta.activation</groupId>
+	    <artifactId>jakarta.activation-api</artifactId>
+	    <version>2.0.1</version>
+	</dependency>
+		
+	<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+	<dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>2.1</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>io.springfox</groupId>
+	    <artifactId>springfox-swagger2</artifactId>
+	    <version>3.0.0</version>
+	</dependency>
+		
 
 	</dependencies>
 
